# vla-robotics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  all_envs.txt  downloaded_envs.txt  finetune_job.sh  pyproject.toml  skills.txt  tasks.py  train_job.sh
.dvc/: config
.github/workflows/: ci.yaml
checkpoints/: state_model_PegInsertionSide_v1_best.pt  state_model_PegInsertionSide_v1_final.pt
configs/: custom_libero.yaml  custom_train_libero_all.yaml  sft_libero_all.yaml  sft_libero_spatial.yaml  sft_maniskill_peginsertion.yaml  sft_maniskill_pickcube.yaml  sft_maniskill_pickcube_eval_libero.yaml  smolvla_eval_libero_all.yaml  smolvla_eval_maniskill.yaml  smolvla_libero.yaml  smolvla_train_libero_all.yaml  srpo_libero_smoke.yaml  srpo_libero_spatial.yaml  srpo_pickcube.yaml
configs/evaluate/: base.yaml
configs/train_srpo/: base.yaml
dockerfiles/: preprocess.dockerfile
docs/: RLT_pi.md  fpo_flow_matching_policy_optimization_overview.md  fpo_hyperparameter_experiments.md  hpc.md  ript_vla_paper_overview.md  robocasa_setup.md  sac_flow.md  simplevla_rl_paper_overview.md  smolvla_libero_eval.md  srpo_paper_overview.md
jobs/: _actions.yaml  _env.sh  _profiles.yaml  benchmark_rollouts_a100.sh  benchmark_rollouts_l40s.sh  eval.sh  eval_compare_spatial.sh  eval_job.sh  eval_rl_spatial_a100.sh  eval_rl_spatial_l40s.sh  eval_sft_spatial_a100.sh  eval_sft_spatial_l40s.sh  finetune_job.sh  finetune_smolvla.sh  goal_lang.sh  libero_clean_download.sh  nr1_goal_lang.sh  nr1_object_lang.sh  nr1_spatial_lang.sh  nr2_goal_lang.sh  nr2_object_lang.sh  nr2_spatial_lang.sh  nr3_goal_lang.sh  nr3_object_lang.sh  nr3_spatial_lang.sh  object_lang.sh  p4b_collect_distill_rollouts_l40s.sh  p4b_distill_l40s.sh  p5b_libero_plus_eval_l40s.sh  sft_libero_all_a100.sh  sft_libero_all_l40s.sh  sft_peginsertion_l40s.sh  smolvla_eval_libero_all_a100.sh  smolvla_eval_libero_all_l40s.sh  smolvla_eval_maniskill_l40s.sh  smolvla_train_libero_all_a100.sh  sparse_awr_l40s.sh  sparse_fpo_l40s.sh  sparse_from_base_l40s.sh  sparse_rl_libero_smoke_l40s.sh  (+15 more)
language_diagnostics/: libero_prompt_variant_generate.py  libero_prompt_variant_prompt_plan.json  libero_prompt_variant_prompt_plan2.json  libero_prompt_variant_rollouts.py  libero_prompt_variant_rollouts_split.py  libero_prompt_variant_run.py  variant_prompt_plan_full.json  variant_prompt_plan_goal.json  variant_prompt_plan_goal_nr1.json  variant_prompt_plan_goal_nr2.json  variant_prompt_plan_goal_nr3.json  variant_prompt_plan_object.json  variant_prompt_plan_object_nr1.json  variant_prompt_plan_object_nr2.json  variant_prompt_plan_object_nr3.json  variant_prompt_plan_spatial.json  variant_prompt_plan_spatial_nr1.json  variant_prompt_plan_spatial_nr2.json  variant_prompt_plan_spatial_nr3.json
language_diagnostics/outputs/: libero_prompt_variant_prompts.csv  libero_prompt_variant_rollouts_raw.csv
language_diagnostics/sensitivity_experiment/: analyze_results.py  extract_h5_files.py  language_sensitivity.py
notebooks/: 10_patch_interpretability.ipynb  attention_rollout.ipynb  attention_rollout_and_other_method.ipynb  clustering_exploration.ipynb  libero_prompt_variant_analysis.ipynb  probing.ipynb  srpo_reward_study.ipynb  tokens_to_actions.ipynb  vision_analysis_quantitative.ipynb  vision_analysis_refined.ipynb  vlm_diagnostic.ipynb  vlm_output_decode.ipynb
results/: .gitignore
results/evals/: eval_fpo_t5_chunk5_lowsft_kl_best_28314273.json  eval_fpo_t5_chunk5_lowsft_kl_best_28335554.json  eval_fpo_t5_chunk5_sftkl002_best_28338903.json  eval_libero_spatial_smolvla_libero.json  eval_rl_spatial_28188629_best_current_seed42.json  eval_rl_spatial_a100_spatial_task_2_seed42_28123898_28161008.json  eval_rl_spatial_a100_spatial_task_5_seed42_28188629_28254851.json  eval_rl_spatial_a10_10tasks_spatial_seed42_28249578_28314443.json  eval_rl_spatial_a10_spatial_task_5_seed42_28263586_28323448.json  eval_rl_spatial_l40s_spatial_task_2_seed42_28123898_28248486.json  eval_rl_spatial_l40s_spatial_task_5_seed42_28162714_28166091.json  eval_rl_spatial_l40s_spatial_task_5_seed42_28175774_28176998.json  eval_rl_spatial_l40s_spatial_task_5_seed42_28188629_28192830.json  eval_rl_spatial_l40s_spatial_task_5_seed42_28188629_28192858.json  eval_sft_spatial_current_seed42.json  eval_sft_spatial_current_seed42_n10.json  eval_sft_spatial_current_seed42_n15.json  eval_sft_spatial_current_seed42_n2.json  eval_sft_spatial_current_seed42_n5.json  eval_sft_spatial_current_seed42_n50.json  (+12 more)
scripts/: benchmark_rollouts.py  collect_data.py  collect_success_dataset.py  convert_checkpoint.py  distill_from_rollouts.py  download_all.py  download_data.py  download_libero.py  download_libero_plus_demo.py  evaluate.py  evaluate_hydra.py  export_libero_demos_h5.py  fix_robocasa_gentex.py  merge_checkpoints.py  preprocess_all.py  preprocess_data.py  record_so101_mujoco.py  reward_study.py  run_experiment.py  setup_libero.py  setup_robocasa.py  teleoperate.py  train_sft.py  train_srpo.py  train_srpo_hydra.py  validate_hpc_setup.py  visualize.py  visualize_clusters.py  visualize_demo_distances.py
smolvla_language_pilot/: LLM_language.py  collect_trajectory.py  graph_generator.py  inspect_h5.py  instruction_variants.json  instruction_variants.py  language_class.py  language_replay.py  multirollout_pipeline.py  multitask_diagnostic.py  plot_per_task.py  plot_per_task_from_summary.py  single_rollout_test.py
smolvla_visual_pilot/: config.py  data_loader.py  download_libero_clean.py  inference.py  libero_plus_data_work.py  logger.py  metrics.py  noise.py  plot_result.py  raw_action_logger.py  run_evaluation.py  visualize_noise_types.ipynb
tests/: helpers.py  test_custom_model.py  test_data.py  test_evaluate_hydra.py  test_flow_grpo_rollout.py  test_fm.py  test_fpo.py  test_hydra_job_generation.py  test_job_scripts.py  test_multitask_srpo.py  test_policy_updates.py  test_policy_wrapper.py  test_ppo.py  test_robocasa_parallel_rollout_smoke.py  test_robocasa_rollout_unit.py  test_robocasa_runtime.py  test_robocasa_train_integration.py  test_so101_mujoco.py
(+328 files in other folders)
