[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "vla-robotics"
version = "0.1.0"
description = "VLA Robotics -- LIBERO benchmarking with SmolVLA and custom VLA models"
authors = [
  { name = "Rune Harlyk", email = "s234814@dtu.dk" }
]
license = { file = "LICENSE" }
keywords = ["machine learning", "robotics", "vla"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "dvc[gcs]>=3.66.1",
    "mani-skill>=3.0.0b22",
    "num2words>=0.5.14",
    "numpy>=2.2.6",
    "opencv-python",
    "robotic-transformer-pytorch",
    "sentencepiece>=0.2.1",
    "timm>=1.0.0",
    "torch>=2.2.1,<2.8.0",
    "torchvision",
    "typer>=0.23",
    "wandb>=0.24.2",
    "lerobot[smolvla]>=0.4.3",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
sim = [
    "robosuite==1.4.0",
    "libero>=0.1.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "invoke==2.2.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.2",
    "ipykernel>=7.2.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv]
build-backend.module-name = "vla"
override-dependencies = [
    "gymnasium==0.29.1",
    "mani-skill==3.0.0b22"
]
